@@ -27,3 +27,6 @@ Michael Jahn <mikej06@hotmail.com>
 Jessica Katharina Parth <Jessica.K.P@women-at-work.org>
 * OFDb movie plugin
 * CSV import plugin
+
+dragonskulle <dragonskulle@gmail.com>:
+* seen / unseen icons
