@@ -6,6 +6,8 @@ Griffith ChangeLog
 
 2007-02-20  Piotr Ożarowski
 	* IMDB movie plugin updated
+	* New seen/unseen icons (thanks to dragonskulle)
+	* About window updated
 
 2007-02-19  Piotr Ożarowski
 	* CSFD movie plugin updated (still needs work)
